fix toolbar and spacing

--- a/src/app/components/news-list/news-list.component.scss
+++ b/src/app/components/news-list/news-list.component.scss
@@ -6,8 +6,8 @@ h3 {
 
 .mat-accordion {
     .mat-expansion-panel {
-        background: #FFF;
-        margin: 2rem;
+        width: 400px;
+        margin: 2rem auto;
         text-align: left;
     }
 }
