--- a/src/app/components/shared/toolbar/toolbar.component.scss
+++ b/src/app/components/shared/toolbar/toolbar.component.scss
@@ -1,21 +1,17 @@
 .mat-toolbar {
-    z-index: 9;
-    position: fixed;
-    bottom: 0;
+    position: sticky;
+    top: 0;
     max-width: 810px;
-    @media screen and (min-width: 992px) {
-        position: static;
-    }
     &-row {
-        height: 70px;
-        justify-content: space-around;
+        height: 60px;
+        justify-content: space-between;
     }
     .mat-button-wrapper {
         display: flex;
         flex-direction: column;
     }
     &__button.mat-icon-button {
-        line-height: 15px;
+        line-height: 10px;
     }
     .mat-icon {
         height: 28px;
