--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,28 @@
     Layout
 */
 
+.toolbar {
+    z-index: 9;
+}
+
+main {
+    @media screen and (max-width: 992px) {
+        padding-bottom: 80px;
+        display: flex;
+        flex-direction: column;
+        .toolbar {
+            width: 100%;
+            position: fixed;
+            bottom: 0;
+            margin-top: 3rem;
+        }
+    }
+    @media screen and (min-width: 992px) {
+        padding-bottom: 2rem;
+        margin-bottom: 3rem;
+    }
+}
+
 body {
     max-width: 810px;
     min-height: 100vh;
